- Fixed retry delay calculation in case of connection refused

2010-01-17:
- Fixed a possible segfault when sorting calllists and fonbooks

2010-01-18:
- Added Config::SetupPorts() to provide non-standard ports
- Fixed some warnings about ununsed parameters in base-classes and empty implementations
- Removed useless check in CallList::RetrieveEntry()

2010-01-25:
- FritzClient::Login() now returns a bool wether login was successful
- FritzClient::hasValidPassword() can now be used to determine the result of the last Login()
- Tools::GetLocationSettings() now returns a bool wether the password used 
  to access the FB was valid
- Fixed two bugs in sorting call lists by date / time

2010-01-27:
- Improved destructor of Listener to allow proper cleanup of thread
  
2010-01-29:
- Added CallList::LastCall()

2010-01-31:
- removed FonbookEntry::getTypeName() as this is something the consumer has to take care about

2010-02-05:
- introduced I18N_NOOP macro, this allows application that use libfritz++ to identify strings 
  delivered by the library (e.g., using xgettext) they should localize
  
2010-02-06:
- fixed sorting issue in calllist by putting remoteNumber / "unknown" into the remoteName field
- "unknown" call list entries are now always sorted to beginning of the list

2010-02-07:
- addes a missing redefinition of GetTechId() in class FonbookManager

2010-02-16:
- modified logging to handle full path filenames cause by cmake in __FILE__.
  Provided new logging macros DBG, INF, ERR
- Removed dependency to OpenSSL due to licensing issues, 
  using copy of MD5 implementation from GNU coreutils 5.93
  
2010-02-19:
- Removed md5.[h,c] in favor of libgcrypt, libfritz++ now needs libgcrypt's 
  development header "gcrypt.h" to compile
  
2010-02-20:
- Added a missing call to Login() in FritzClient::InitCall()
- Do not initiate a call if no number is given in FritzClient::InitCall()

2010-02-25:
- Implemented FritzClient::getCurrentIP and FritzClient::reconnectISP
 