@@ -28,7 +28,9 @@
 #include <string>
 
 #define NAMESPACE "libfritz++"
-#define LOCATOR "[" << NAMESPACE << std::string(__FILE__, std::string(__FILE__).rfind('/'), std::string::npos) \
+#define LOCATOR "[" << NAMESPACE << "/" <<  \
+                std::string(__FILE__, std::string(__FILE__).rfind('/') == std::string::npos ? \
+                		          0 : std::string(__FILE__).rfind('/')+1, std::string::npos ) \
                 << ":" << __LINE__ << "] "
 #define DBG(x) *::fritz::dsyslog << LOCATOR << x << std::endl;
 #define INF(x) *::fritz::isyslog << LOCATOR << x << std::endl;
