@@ -10,3 +10,6 @@
   
 2010-02-17
 - Fixed copyright information in all source code files
+
+2010-02-24:
+- Fixed LOCATOR macro to support cmake and make
