@@ -156,6 +156,9 @@
 - Added a missing call to Login() in FritzClient::InitCall()
 - Do not initiate a call if no number is given in FritzClient::InitCall()
 
+2010-02-24:
+- Fixed LOCATOR macro to support cmake and make
+
 2010-02-25:
 - Implemented FritzClient::getCurrentIP and FritzClient::reconnectISP
  
